<resources>
    <string name="app_name">EyeQ</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="email">E-mail</string>
    <string name="phonenum">Mobile Number</string>
    <string name="device_info">Device Information</string>
    <string name="model">Model :</string>
    <string name="os">OS Version :</string>
    <string name="bt">Bluetooth Version :</string>
    <string name="agree">I have read and agreed to the&#160;&#160;</string>
    <string name="pp"><u>Privacy Policy</u>.</string>
    <string name="skip">SKIP</string>
    <string name="submit">SUBMIT</string>
    <string name="vibrate">Vibrate when taking photo or video</string>
    <string name="settings">Settings</string>
    <string name="browse">Browse</string>
    <string name="zoom">Zoom</string>
    <string name="takephoto">Capture</string>
    <string name="record">Record</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="gallery">Gallery</string>

    <string name="videoquality">Video quality</string>
    <string name="highquality">High quality\n1920*1080</string>
    <string name="medquality">Med quality\n1280*720</string>
    <string name="lowquality">Low quality\n640*480</string>

    <string name="photoquality">Photo quality</string>
    <string name="maxres">Maximum\nResolution</string>
    <string name="q1080p">1080p\n1920*1080</string>
    <string name="q720p">720p\n1280*720</string>
    <string name="vga">VGA\n640*480</string>


</resources>