<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".activities.FormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:src="@drawable/eyeq" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/img_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/edittext_bckgnd"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp" />


            <EditText
                android:id="@+id/mobilenum"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/edittext_bckgnd"
                android:hint="@string/phonenum"
                android:inputType="phone"
                android:paddingStart="10dp" />

            <RelativeLayout
                android:id="@+id/device_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mobilenum"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp">

                <TextView
                    android:id="@+id/device_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_info"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/device_info"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edittext_bckgnd"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/model"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/model" />

                    <TextView
                        android:id="@+id/os_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/os" />

                    <!--            <TextView-->
                    <!--                android:id="@+id/bt"-->
                    <!--                android:layout_width="wrap_content"-->
                    <!--                android:layout_height="wrap_content"-->
                    <!--                android:paddingStart="10dp"-->
                    <!--                android:layout_marginBottom="10dp"-->
                    <!--                android:text="@string/bt" />-->

                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/vibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/device_details"
                android:layout_alignStart="@id/pp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_vibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/vibrate" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/pp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/vibrate"
                android:layout_alignStart="@id/device_details">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/agree" />

                <TextView
                    android:id="@+id/text_pp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pp"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="50dp">

<!--                <TextView-->
<!--                    android:id="@+id/skip"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:layout_marginEnd="25dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:background="@drawable/button_backgnd"-->
<!--                    android:gravity="center"-->
<!--                    android:text="@string/skip"-->
<!--                    android:textColor="@android:color/white"-->
<!--                    android:textSize="18sp"-->
<!--                    android:textStyle="bold" />-->

                <TextView
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:minWidth="200dp"
                    android:background="@drawable/button_backgnd"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>