<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/settings_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/left_menu1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/settings_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@drawable/rounded_right_corner">

                <TextView
                    android:id="@+id/text_back"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/back"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/img_hide"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@+id/text_back"
                    android:src="@drawable/left" />


            </RelativeLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/settings"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/right_menu1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/videoquality"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_left_corner">

                <TextView
                    android:id="@+id/text_videoquality"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/videoquality"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/photoquality"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_left_corner">


                <TextView
                    android:id="@+id/text_photoquality"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/photoquality"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />


            </RelativeLayout>

            <!--            <RelativeLayout-->
            <!--                    android:id="@+id/stabilization"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_gravity="end"-->
            <!--                    android:layout_marginBottom="20dp"-->
            <!--                    android:background="@drawable/rounded_left_corner">-->


            <!--                <TextView-->
            <!--                        android:id="@+id/text_stabilization"-->
            <!--                        android:layout_width="80dp"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:layout_centerInParent="true"-->
            <!--                        android:layout_centerVertical="true"-->
            <!--                        android:layout_marginLeft="20dp"-->
            <!--                        android:text="@string/stabilization"-->
            <!--                        android:textColor="@android:color/white"-->
            <!--                        android:textSize="15sp"/>-->


            <!--            </RelativeLayout>-->

            <!--            <RelativeLayout-->
            <!--                    android:id="@+id/logout"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_gravity="end"-->
            <!--                    android:layout_marginBottom="20dp"-->
            <!--                    android:background="@drawable/rounded_left_corner">-->


            <!--                <TextView-->
            <!--                        android:id="@+id/text_logout"-->
            <!--                        android:layout_width="80dp"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:layout_centerInParent="true"-->
            <!--                        android:layout_centerVertical="true"-->
            <!--                        android:layout_marginLeft="20dp"-->
            <!--                        android:text="@string/logout"-->
            <!--                        android:textColor="@android:color/white"-->
            <!--                        android:textSize="15sp"/>-->


            <!--            </RelativeLayout>-->


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
